hashicorp-vault/templates/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hashicorp-vault-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: 'Host(`hashicorp-vault.k3s.v3nc.org`)'
      priority: 10
      services:
        - name: hashicorp-vault
          port: 8200
          scheme: https
      middlewares:
      - name: http-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hashicorp-vault-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`hashicorp-vault.k3s.v3nc.org`)'
      priority: 10
      services:
        - name: hashicorp-vault
          port: 8200
          scheme: https
  tls:
    secretName: hashicorp-vault-https-cert
